Correction bug navBar

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
 		<body>
 
 			{% block header %}
-				{% include "partials/header.html.twig" %}
+				{% include "admin/partials/header.html.twig" %}
 			{% endblock %}
 
 			{% block body %}{% endblock %}
