--- a/templates/admin/partials/header.html.twig
+++ b/templates/admin/partials/header.html.twig
@@ -11,8 +11,14 @@
 		<ul class="navbar-nav mr-auto">
 			<li class="nav-item">
 				<a class="nav-link" href="#">
-					<i class="fas fa-car-side"></i>
-					Intervention
+					<i class="fas fa-layer-group"></i>
+					Stock
+				</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">
+					<i class="fas fa-history"></i>
+					Historique
 				</a>
 			</li>
 		</ul>
@@ -20,7 +26,6 @@
 			{# {% if app.user %} #}
 				<li class="nav-item dropdown">
 					<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="accountDropdownLink">
-						{# {{ app.user.nom }} #}
 						Igal
 					</a>
 					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="accountDropdownLink">
@@ -33,6 +38,11 @@
 						<a href="#" class="dropdown-item">Modifier mes informations</a>
 
 						<div class="dropdown-divider"></div>
+
+
+						<a href="{{ path('AdminDasboard.index') }}" class="dropdown-item">Gestion</a>
+						<a href="{{ path('AdminArchive.index') }}" class="dropdown-item">Archives</a>
+
 
 						<div class="dropdown-divider"></div>
 
