--- a/templates/admin/partials/header.html.twig
+++ b/templates/admin/partials/header.html.twig
@@ -8,22 +8,23 @@
 	</button>
 
 	<div class="collapse navbar-collapse" id="navbarColor01">
-		<ul class="navbar-nav mr-auto">
-			<li class="nav-item">
-				<a class="nav-link" href="#">
-					<i class="fas fa-layer-group"></i>
-					Stock
-				</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="#">
-					<i class="fas fa-history"></i>
-					Historique
-				</a>
-			</li>
-		</ul>
-		<ul class="navbar-nav ml-auto">
-			{# {% if app.user %} #}
+		{% if app.user %}
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item">
+					<a class="nav-link" href="#">
+						<i class="fas fa-layer-group"></i>
+						Stock
+					</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">
+						<i class="fas fa-history"></i>
+						Historique
+					</a>
+				</li>
+			</ul>
+			<ul class="navbar-nav ml-auto">
+
 				<li class="nav-item dropdown">
 					<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="accountDropdownLink">
 						Igal
@@ -34,7 +35,7 @@
 
 						<div class="dropdown-divider"></div>
 
-						<a href="#" class="dropdown-item">Mon compte</a>
+						<a href="{{ path('Account.myAccount', {'id' : 351}) }}" class="dropdown-item">Mon compte</a>
 						<a href="#" class="dropdown-item">Modifier mes informations</a>
 
 						<div class="dropdown-divider"></div>
@@ -46,10 +47,10 @@
 
 						<div class="dropdown-divider"></div>
 
-						<a href="#" class="dropdown-item text-danger">Déconnexion</a>
+						<a href="{{ path('Account.logout') }}" class="dropdown-item text-danger">Déconnexion</a>
 					</div>
 				</li>
-			{# {% endif %} #}
+			{% endif %}
 		</ul>
 	</div>
 </nav>
