--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -36,7 +36,7 @@
 
 						<div class="dropdown-divider"></div>
 
-						<a href="#" class="dropdown-item text-danger">Déconnexion</a>
+						<a href="{{ path('Account.logout') }}" class="dropdown-item text-danger">Déconnexion</a>
 					</div>
 				</li>
 			{# {% endif %} #}
